Summary for chapter 3 + moved buildcomp impl to chapter 4

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1895,6 +1895,7 @@
   pages = {151--166},
   numpages = {16},
   doi = {10.1007/bfb0054170},
+  url = {http://dx.doi.org/10.1007/bfb0054170},
   acmid = {691453},
   publisher = {Springer-Verlag},
   address = {London, UK, UK}
@@ -2015,7 +2016,8 @@
   number = {4}, 
   pages = {352-357}, 
   keywords = {Data flow analysis;debugging;human factors;parallel processing;program maintenance;program metrics;slicing;software tools}, 
-  doi = {10.1109/TSE.1984.5010248}, 
+  doi = {10.1109/TSE.1984.5010248},
+  url = {http://dx.doi.org/10.1109/TSE.1984.5010248},
   ISSN = {0098-5589}, 
   month = {July}
 }
