--- a/continuous-opt.tex
+++ b/continuous-opt.tex
@@ -1,3 +1,5 @@
+% !TEX root = thesis.tex
+
 \chapter{Continuous Program Optimization Techniques}
 \label{ch:continuous}
 
@@ -7,5 +9,5 @@ In the first part of the chapter, we present a platform-independent framework fo
 
 In the second part, we make a first step towards a provably sound methodological framework for OSR. We formalize the concept of {\em multi-version program}, and we identify sufficient conditions for the correctness of an OSR transition. We also devise an algorithm for automatically generating compensation code possibly required to realign program state in the presence of several common compiler optimizations.
 
-\input{osr-llvm}
+\input{osrkit}
 \input{osr-correctness}
