--- a/thesis.tex
+++ b/thesis.tex
@@ -28,8 +28,8 @@
 \submitdate{June 2016}
 \copyyear{2016}
 \advisor{Prof. Camil Demetrescu}
-%\advisor{Dr. Nome Cognome}
-%\coadvisor{Dr. Nome Cognome}
+\coadvisor{Prof. Steven Blackburn}
+\coadvisor{Dr. David Grove}
 \authoremail{danielecono.delia@gmail.com}
 
 \newcommand{\noauthorea}{}
