All entries in bibliography should be okay now

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -202,7 +202,7 @@
   address   = {San Diego, CA},
   month     = {February},
   year      = 2008,
-  note = {URL: \url{http://www.isoc.org/isoc/conferences/ndss/08/papers/14_automatic_protocol_format.pdf}. Accessed: 2016-06-13.}
+  note = {URL \url{http://www.isoc.org/isoc/conferences/ndss/08/papers/14_automatic_protocol_format.pdf}. Accessed: 2016-06-13.}
 }
 
 @article{Ponder88,
@@ -431,7 +431,7 @@
   Pages = {117--126},
   Title = {{Bursty Tracing: A Framework for Low-Overhead Temporal Profiling}},
   Year = {2001},
-  note = {URL: \url{http://research.microsoft.com/en-us/um/people/trishulc/papers/bursts_fddo.pdf}. Accessed: 2016-06-13}
+  note = {URL \url{http://research.microsoft.com/en-us/um/people/trishulc/papers/bursts_fddo.pdf}. Accessed: 2016-06-13}
 }
 
 @inproceedings{Serrano09,
@@ -708,15 +708,15 @@
   title = {{Path-based Compilation}},
   year = {1998},
   isbn = {0-591-74986-6},
-  note = {AAI9822933},
-  publisher = {Harvard University},
-  address = {Cambridge, MA, USA}
+  note = {ISBN 0-591-74986-6. Order Number AAI9822933. URL \url{www.eecs.harvard.edu/hube/publications/cyoung-thesis.ps}. Accessed: 2016-06-18},
+  school = {Harvard University},
+  address = {Cambridge, MA, USA},
 }
 
 @inproceedings{Bodik99,
   author = {Bod\'{\i}k, Rastislav and Gupta, Rajiv and Soffa, Mary Lou},
   title = {{Load-Reuse Analysis: Design and Evaluation}},
-  booktitle = {Proceedings of the ACM SIGPLAN 1999 conference on Programming language design and implementation},
+  booktitle = {Proceedings of the ACM SIGPLAN 1999 Conference on Programming language design and implementation},
   series = {PLDI '99},
   year = {1999},
   isbn = {1-58113-094-5},
@@ -734,7 +734,7 @@
 @inproceedings{Bodik97,
   author = {Bod\'{\i}k, Rastislav and Gupta, Rajiv and Soffa, Mary Lou},
   title = {{Interprocedural Conditional Branch Elimination}},
-  booktitle = {Proceedings of the ACM SIGPLAN 1997 conference on Programming language design and implementation},
+  booktitle = {Proceedings of the ACM SIGPLAN 1997 Conference on Programming language design and implementation},
   series = {PLDI '97},
   year = {1997},
   isbn = {0-89791-907-6},
@@ -1000,7 +1000,7 @@
   author = {Chambers, Craig},
   year = {1992},
   school = {Stanford University},
-  url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.30.1652\&rep=rep1\&type=pdf},
+  note = {URL: \url{http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.30.1652}. Accessed: 2016-06-18},
 }
 
 @inproceedings{Holzle92,
@@ -1044,7 +1044,7 @@
   author = {Pizlo, Filip},
   title = {Introducing the {WebKit} {FTL} {JIT}},
   type = {Blog},
-  note = {URL: \url{https://www.webkit.org/blog/3362/}. Accessed: 2016-01-09}
+  note = {URL \url{https://www.webkit.org/blog/3362/}. Accessed: 2016-01-09}
 }
 
 @inproceedings{Lameed13,
@@ -1328,6 +1328,7 @@
   isbn = {0201072564},
   publisher = {Addison-Wesley Longman Publishing Co., Inc.},
   address = {Boston, MA, USA},
+  url = {http://dl.acm.org/citation.cfm?id=539775}
 }
 
 @inproceedings{Luk05,
@@ -1459,7 +1460,7 @@
   isbn={9780201308600},
   lccn={00042758},
   series={Featured Titles for Numerical Analysis Series},
-  url={http://books.campusvirtualsp.org/books?id=H\_QeAQAAIAAJ},
+  note = {URL \url{http://web.cecs.pdx.edu/~gerry/nmm/}. Accessed: 2016-06-18},
   year={2000},
   publisher={Prentice Hall}
 }
@@ -1575,9 +1576,9 @@
   advisor = {Gross, Thomas},
   title = {{Source-Level Debugging of Globally Optimized Code}},
   year = {1996},  
-  publisher = {Carnegie Mellon University},
+  school = {Carnegie Mellon University},
   address = {Pittsburgh, PA, USA},
-  url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.73.5762}
+  note = {URL \url{http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.73.5762}. Accessed: 2016-06-18}
 }
 
 @inproceedings{Wu99,
@@ -1677,15 +1678,14 @@
 }
 
 @inproceedings{Soman06,
-  title = {{Efficient and General On-Stack Replacement for Aggressive Program Specialization.}},
+  title = {{Efficient and General On-Stack Replacement for Aggressive Program Specialization}},
   author = {Soman, Sunil and Krintz, Chandra},
   booktitle = {Proceedings of the 2006 International Conference on Programming Languages and Compilers},
   series = {PLC'06},
   location = {Las Vegas, Nevada, USA},
-  booktitle = {Software Engineering Research and Practice},
   pages = {925--932},
   year = {2006},
-  url = {http://cs.ucsb.edu/~ckrintz/papers/osr.pdf},
+  note = {URL \url{http://cs.ucsb.edu/~ckrintz/papers/osr.pdf}. Accessed: 2016-06-18}
 }
 
 
@@ -1860,7 +1860,7 @@
   location = {San Diego, California},
   pages = {31--44},
   numpages = {14},
-  note = {URL: \url{http://static.usenix.org/legacy/events/usenix09/tech/full_papers/makris/makris.pdf}. Accessed: 2016-06-13},
+  note = {URL \url{http://static.usenix.org/legacy/events/usenix09/tech/full_papers/makris/makris.pdf}. Accessed: 2016-06-13},
   acmid = {1855838},
   publisher = {USENIX Association},
   address = {Berkeley, CA, USA}
@@ -1974,17 +1974,19 @@
 @inproceedings{Tan16,
   author = {Tan, Tian and Li, Yue and Zhang, Yifei and Xue, Jingling},
   title = {{Program Tailoring: Slicing by Sequential Criteria}},
-  booktitle = {Proceedings of the 30th European conference on Object-Oriented Programming},  
+  booktitle = {Proceedings of the 30th European Conference on Object-Oriented Programming},  
   series = {ECOOOP '16},
-  year = {2016}
+  year = {2016},
+  note = {To appear}
 }
 
 @inproceedings{ChevalierBoisvert16,
   author = {Maxime Chevalier{-}Boisvert and Marc Feeley},
   title = {{Interprocedural Type Specialization of JavaScript Programs Without Type Analysis}},
-  booktitle = {Proceedings of the 30th European conference on Object-Oriented Programming},  
+  booktitle = {Proceedings of the 30th European Conference on Object-Oriented Programming},  
   series = {ECOOOP '16},
-  year = {2016}
+  year = {2016},
+  note = {To appear}
 }
 
 @article{Weiser82,
@@ -2391,48 +2393,48 @@
 
 %% MISC (URLs)
 @misc{perf,
-  author = {{perf: {Linux} profiling with performance counters}},
-  note = {URL: \url{https://perf.wiki.kernel.org/}. Accessed: 2016-02-15}
+  author = {{perf: {Linux} Profiling with Performance Counters}},
+  note = {URL \url{https://perf.wiki.kernel.org/}. Accessed: 2016-02-15}
 }
 
 @misc{Phoronix,
   author = {{Phoronix Test Suite (PTS)}},
-  note = {URL: \url{http://www.phoronix-test-suite.com/}. Accessed: 2016-03-27}
+  note = {URL \url{http://www.phoronix-test-suite.com/}. Accessed: 2016-03-27}
 }
 
 @misc{SpecJVM2008,
  author = {{SPECjvm2008 Java Virtual Machine Benchmark}},
- note = {URL: \url{https://www.spec.org/jvm2008/}. Accessed: 2016-03-27}
+ note = {URL \url{https://www.spec.org/jvm2008/}. Accessed: 2016-03-27}
 }
 
 @misc{PEP,
   author = {{Jikes RVM Research Archive}},
-  title = {{{PEP}: continuous path and edge profiling}},
-  note = {URL: \url{http://jikesrvm.org/Research+Archive}. Accessed: 2016-03-27}
+  title = {{{PEP}: Continuous Path and Edge Profiling}},
+  note = {URL \url{http://jikesrvm.org/Research+Archive}. Accessed: 2016-03-27}
 }
 
 @misc{shootout,
   author = {Fulgham, Brent and Gouy, Isaac},
   title = {{The {C}omputer {L}anguage {B}enchmarks {G}ame}},
-  note = {URL: \url{http://benchmarksgame.alioth.debian.org/}. Accessed: 2016-03-25}
+  note = {URL \url{http://benchmarksgame.alioth.debian.org/}. Accessed: 2016-03-25}
 }
 
 @misc{mcvm,
   author = {{The McLab project}},
   title = {{Sable McVM}},
-  note = {URL: \url{https://github.com/Sable/mcvm}. Accessed: 2016-01-13}
+  note = {URL \url{https://github.com/Sable/mcvm}. Accessed: 2016-01-13}
 }
 
 @misc{simanl,
   author = {H\^{e}ctor Corte},
   title = {{Simulated Annealing Optimization}},
-  note = {URL: \url{http://www.mathworks.com/matlabcentral/fileexchange/33109-simulated-annealing-optimization}. Accessed: 2016-03-26}
+  note = {URL \url{http://www.mathworks.com/matlabcentral/fileexchange/33109-simulated-annealing-optimization}. Accessed: 2016-03-26}
 }
 
 @misc{luajit,
   author = {Pall, Mike},
   title = {{LuaJIT 2.0 intellectual property disclosure and research opportunities}},
-  note = {URL: \url{http://lua-users.org/lists/lua-l/2009-11/msg00089.html}. Accessed: 2016-01-13},
+  note = {URL \url{http://lua-users.org/lists/lua-l/2009-11/msg00089.html}. Accessed: 2016-01-13},
 }
 
 @misc{vitek16,
