Geometric mean in Table 6.3

--- a/case-study-debugging.tex
+++ b/case-study-debugging.tex
@@ -106,7 +106,7 @@ lbm & 0.30 & 0.51 & 1.97 & 1.37 & 3 \\
 \hline
 libquantum & 0.13 & 0.10 & 1.06 & 0.17 & 2 \\
 \hline
-mcf & 0.35 & 0.32 & 1.00 & 0.00 & 1 \\
+mcf & 0.35 & 0.32 & 1.00 & - & 1 \\
 \hline
 milc & 0.24 & 0.21 & 1.14 & 0.29 & 3 \\
 \hline
@@ -117,7 +117,8 @@ sjeng & 0.26 & 0.20 & 1.24 & 0.42 & 3 \\
 sphinx3 & 0.29 & 0.31 & 1.19 & 0.44 & 6 \\
 \hline
 \hline
-Mean & 0.28 & 0.28 & 1.28 & 0.52 & 6.08 \\
+%Mean & 0.28 & 0.28 & 1.28 & 0.52 & 6.08 \\ % arithmetic
+Mean & 0.26 & 0.25 & 1.26 & 0.47 & 6.08 \\
 \hline
 \end{tabular} 
 \end{small}
