--- a/hcct-evaluation.tex
+++ b/hcct-evaluation.tex
@@ -135,7 +135,7 @@ Since the average node degree is a small constant, cold HCCT nodes are typically
 
 \subsection{Time Overhead}
 
-We now discuss the time overhead of our approach, both alone and in combination with static bursting. We compare to native execution, to the widely-used call-graph profiler \gprof~\cite{Graham82}, and to the canonical CCT construction. To assess the instrumentation overhead, we also compare to {\em empty} instrumentation (i.e., when no analysis is performed).
+We now discuss the time overhead of our approach, both alone and in combination with static bursting. We compare to native execution, to the widely used call-graph profiler \gprof~\cite{Graham82}, and to the canonical CCT construction. To assess the instrumentation overhead, we also compare to {\em empty} instrumentation (i.e., when no analysis is performed).
 
 \ifdefined\noauthorea
 \begin{figure}[!ht]
